<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title_nanodegree">My Nanodegree Apps!</string>
    <string name="btn_txt_movies">Popular Movies</string>
    <string name="btn_txt_score">Score App</string>
    <string name="btn_txt_library">Library App</string>
    <string name="btn_txt_big_one">Build it bigger</string>
    <string name="btn_txt_reader">XYZ Reader</string>
    <string name="btn_text_myapp">Capstone: My Own App</string>
    <string name="movies_db_api_test">YOUR_API_KEY</string>
    <string name="pop_movies">Pop Movies</string>
    <string name="pop_movies_detail">Movie Detail</string>
    <string name="method_type">POST</string>
    <string name="user_property">Content-length</string>
    <string name="action_popular">Most Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="action_favourite_movies">Favourite Movies</string>
    <string name="action_share_trailer">Share Trailer</string>
    <string name="title_description">Overview</string>
    <string name="title_trailers">Trailers</string>
    <string name="title_reviews">Reviews</string>
</resources>
