<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="sharma.pankaj.nanodegree.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_nanodegree"
        android:textSize="@dimen/text_size_large" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_spotify"
        android:layout_marginTop="@dimen/margin_large"
        android:onClick="onClick"
        android:text="@string/btn_txt_movies" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_score"
        android:onClick="onClick"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/btn_txt_score" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_library"
        android:layout_marginTop="@dimen/margin_small"
        android:onClick="onClick"
        android:text="@string/btn_txt_library" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_big"
        android:layout_marginTop="@dimen/margin_small"
        android:onClick="onClick"
        android:text="@string/btn_txt_big_one" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_reader"
        android:layout_marginTop="@dimen/margin_small"
        android:onClick="onClick"
        android:text="@string/btn_txt_reader" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/btn_main_own"
        android:layout_marginTop="@dimen/margin_small"
        android:onClick="onClick"
        android:text="@string/btn_text_myapp" />


</LinearLayout>
