<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal"
        android:padding="@dimen/activity_horizontal_margin">

        <ImageView
            android:id="@+id/imv_movie_detail_thumb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txv_movie_detail_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_medium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/txv_movie_detail_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/txt_size_large" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:id="@+id/cb_favourite"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/margin_large"
                    android:button="@drawable/cb_favourite"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/txv_movie_detail_running_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_medium"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txv_movie_detail_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="@dimen/txt_size_small" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/title_description"
            android:textSize="@dimen/txt_size_medium"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/txv_movie_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_horizontal_margin"
            android:textSize="@dimen/txt_size_small" />

        <include layout="@layout/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_trailers"
                android:textSize="@dimen/txt_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="24dp"
                android:layout_centerVertical="true"
                android:id="@+id/pb_trailers"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:layout_height="24dp" />

        </RelativeLayout>

        <GridLayout
            android:id="@+id/grid_layout_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:columnCount="2"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/margin_small" />

        <include
            android:id="@+id/divider_below_grid"
            layout="@layout/divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:text="@string/title_reviews"
                android:textSize="@dimen/txt_size_medium"
                android:textStyle="bold" />

            <ProgressBar
                android:layout_width="24dp"
                android:layout_centerVertical="true"
                android:id="@+id/pb_reviews"
                android:layout_marginRight="@dimen/margin_small"
                android:layout_alignParentRight="true"
                android:layout_height="24dp" />

        </RelativeLayout>

    </LinearLayout>


</LinearLayout>